# pytest-trio

./: .appveyor.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHEATSHEET.rst  README.rst  ci.sh  docs-requirements.in  docs-requirements.txt  pyproject.toml  pytest.ini  setup.py  test-requirements.in  test-requirements.txt
.github/workflows/: ci.yml
ci/: travis.sh
docs/: Makefile  make.bat
docs/source/: conf.py  history.rst  index.rst  quickstart.rst  reference.rst
docs/source/_static/: hackrtd.css
docs/source/_templates/: layout.html
newsfragments/: 104.feature.rst  105.feature.rst  120.bugfix.rst  128.misc.rst  129.misc.rst  132.bugfix.rst  143.misc.rst  15.removal.rst  17.feature.rst  42.feature.rst  53.feature.rst  64.bugfix.rst  73.feature.rst  75.feature.rst  96.removal.rst  README.rst
pytest_trio/: __init__.py  _version.py  enable_trio_mode.py  plugin.py  timeout.py  traceback_format.py
pytest_trio/_tests/: conftest.py  helpers.py  test_async_fixture.py  test_async_yield_fixture.py  test_basic.py  test_clock_fixture.py  test_contextvars.py  test_fixture_mistakes.py  test_fixture_names.py  test_fixture_nursery.py  test_fixture_ordering.py  test_fixture_scope.py  test_hypothesis_interaction.py  test_nursery_fixture.py  test_sync_fixture.py  test_timeout.py  test_trio_asyncio.py  test_trio_mode.py
